# A-Stockit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml  release.yml
skills/astockit/: index.md
skills/astockit/_docs/: index.md
skills/astockit/_registry/: bundle.json  runtime.json  skills.json  strategies.json
skills/astockit/analysis/: SKILL.md  run.py
skills/astockit/analysis-history/: SKILL.md
skills/astockit/backtest-evaluator/: SKILL.md  run.py
skills/astockit/data-sync/: SKILL.md
skills/astockit/decision-dashboard/: SKILL.md  run.py
skills/astockit/decision-support/: SKILL.md  run.py
skills/astockit/feishu-notify/: SKILL.md  run.py
skills/astockit/fix-everything/: SKILL.md
skills/astockit/fundamental-context/: SKILL.md  run.py
skills/astockit/market-analyze/: SKILL.md  run.py
skills/astockit/market-brief/: SKILL.md  run.py
skills/astockit/market-data/: SKILL.md  run.py
skills/astockit/market-recap/: SKILL.md  run.py
skills/astockit/market-screen/: SKILL.md  run.py
skills/astockit/model-capability-advisor/: SKILL.md  run.py
skills/astockit/news-intel/: SKILL.md  run.py
skills/astockit/paper-trading/: SKILL.md  run.py
skills/astockit/reports/: SKILL.md
skills/astockit/session-status/: SKILL.md  run.py
skills/astockit/stock-data/: SKILL.md  run.py
skills/astockit/strategy-chat/: SKILL.md
(+59 files in other folders)
