[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astockit"
version = "0.1.0"
description = "Bundle-first A-share skill library and reusable runtime support for agent frameworks."
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
]

[project.optional-dependencies]
a_share = ["akshare>=1.13"]
feishu = ["lark-oapi>=1.4"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-dir]
"" = "skills/astockit/_src"

[tool.setuptools.packages.find]
where = ["skills/astockit/_src"]
include = ["core*", "market*", "integrations*", "research*", "backtest*", "strategies*"]
